Make CORS origins configurable via env var